fix whitespace

--- a/_sass/layout/_slabs.scss
+++ b/_sass/layout/_slabs.scss
@@ -18,26 +18,25 @@
 // Styleguide layout.slabs
 
 .slab-alpha {
-	background-color: $white;
+  background-color: $white;
 }
 
 .slab-beta {
-	background-color: $light-gray;
-	background-repeat: no-repeat;
+  background-color: $light-gray;
 }
 
 .slab-charlie {
-	background-color: $mid-gray;
+  background-color: $mid-gray;
 }
 
 .slab-delta {
-	background-color: $light-blue;
+  background-color: $light-blue;
 }
 
 .slab-echo {
-	background-color: $pale-blue;
+  background-color: $pale-blue;
 }
 
 .slab-foxtrot {
-	background-color: $mid-blue;
+  background-color: $mid-blue;
 }
